2010-03-09  Alan Modra  <amodra@gmail.com>

	PR gas/11356
	* listing.c (listing_newline): Correct backslash quote logic.

2010-03-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/tc-i386.h [TE_SOLARIS] (ELF_TARGET_FORMAT): Define.
	(ELF_TARGET_FORMAT64): Define.

2010-03-05  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_cpu_option_table): Add cortex-m4.

2010-03-02  Andrew Stubbs  <ams@codesourcery.com>

	* config/tc-sh.c (get_specific): Move overflow checking code to avoid
	reading uninitialized data.

2010-03-01  Tristan Gingold  <gingold@adacore.com>

	* config/tc-score7.c (s7_frag_check): Add ATTRIBUTE_UNUSED.

2010-02-26  Doug Evans  <dje@sebabeach.org>

	* configure.tgt: Fix mep cpu case.

2010-02-26  Jie Zhang  <jie@codesourcery.com>

	* config/tc-arm.c (do_t_strexd): Remove
	operand[1] != operand[2] contraint.

2010-02-26  Jie Zhang  <jie@codesourcery.com>

	* config/tc-arm.c (neon_select_shape): No need to match
	the remaining operands in the shape when one operand does
	not match.

2010-02-26  Jie Zhang  <jie@codesourcery.com>

	* config/tc-arm.c (do_neon_ld_st_interleave): Reject bad
	alignment.

2010-02-25  Doug Evans  <dje@sebabeach.org>

	* cgen.c: Whitespace fixes.
	(weak_operand_overflow_check): Formatting fix.

2010-02-25  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (match_template): Update error messages.

2010-02-25  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (_i386_insn): Add err_msg.
	(operand_size_match): Set err_msg on failure.
	(operand_type_match): Likewise.
	(operand_type_register_match): Likewise.
	(VEX_check_operands): Likewise.
	(match_template): Likewise.  Use i.err_msg with as_bad.

2010-02-25  Wu Zhangjin <wuzhangjin@gmail.com>

	* config/tc-mips.c (mips_fix_loongson2f, mips_fix_loongson2f_nop,
	mips_fix_loongson2f_jump): New variables.
	(md_longopts): Add New options -mfix-loongson2f-nop/jump,
	-mno-fix-loongson2f-nop/jump.
	(md_parse_option): Initialize variables via above options.