@@ -1,3 +1,10 @@
+2010-03-10  Jie Zhang  <jie@codesourcery.com>
+
+	* doc/as.texinfo: Add Blackfin options.
+	* doc/c-bfin.texi: Document -mfdpic, -mno-fdpic and -mnopic.
+	* config/tc-bfin.c (md_show_usage): Show usage for all
+	Blackfin specific options.
+
 2010-03-09  Alan Modra  <amodra@gmail.com>
 
 	PR gas/11356
